Last updates about settings and some styles.

--- a/app/components/sidebar_component.html.haml
+++ b/app/components/sidebar_component.html.haml
@@ -39,9 +39,10 @@
 
           %li.-mx-6.mt-auto
             %a.flex.items-center.gap-x-4.px-6.py-3.text-sm.font-semibold.leading-6.text-white.hover:bg-gray-800{href: "#"}
-              %img.h-8.w-8.rounded-full.bg-gray-800{alt: "", src: "https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"}/
+              %img.h-8.w-8.rounded-full.bg-gray-800{alt: "Profile photo", src: (@current_user.profile_photo.attached? ? url_for(@current_user.profile_photo) : image_url('no_image.png'))}
               %span.sr-only Your profile
-              %span{'aria-hidden': "true"} Tom Cook
+              %span{'aria-hidden': "true"}
+                = @current_user.full_name
   .sticky.top-0.z-40.flex.items-center.gap-x-6.bg-gray-900.px-4.py-4.shadow-sm.sm:px-6.lg:hidden
     %button.text-gray-400.lg:hidden{data: {action: "sidebar#showMobileMenu"}, class: "-m-2.5 p-2.5", type: "button"}
       %span.sr-only Open sidebar
@@ -50,7 +51,7 @@
     .flex-1.text-sm.font-semibold.leading-6.text-white Dashboard
     %a{href: "#"}
       %span.sr-only Your profile
-      %img.h-8.w-8.rounded-full.bg-gray-800{alt: "", src: "https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"}/
+      %img.h-8.w-8.rounded-full.bg-gray-800{alt: "Profile photo", src: (@current_user.profile_photo.attached? ? url_for(@current_user.profile_photo) : image_url('no_image.png'))}
   %main.py-10.lg:pl-72
     .px-4.sm:px-6.lg:px-8
       = content
