--- a/app/views/manager/profiles/index.html.haml
+++ b/app/views/manager/profiles/index.html.haml
@@ -100,22 +100,22 @@
             .cursor-pointer{class: "inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500", data: { action: "click->profiles-form#close" }}
               = 'Close'
 
-    .flex.items-center.justify-between.text-sm
-      .flex.items-center.text-shadowy-200.text.sm.gap-2
-        %label
-          = "Seleccionar formulario"
-        = form.select :form_id, options_for_select(@forms.map { |f| [f.name, f.id] }, selected: params[:form_id]), { include_blank: 'All' }, { data: { controller: 'slim', placeholder: 'All', action: 'change->autosave#save' } }
-      .flex.items-center.text-shadowy-200.text.sm.gap-2
-        %label
-          = "Resultados:"
-        %label
-          = @total_count
-      .flex.items-center.gap-2
-        .cursor-pointer{class: "inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500", data: { action: "click->profiles-form#open" } }
-          = render BootstrapIconWithTextComponent.new(icon: 'funnel', text: 'Filter', extra_classes: 'text-xl')
-        .cursor-pointer{class: "inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"}
-          = render BootstrapIconWithTextComponent.new(icon: 'arrow-clockwise', text: 'Reset', extra_classes: 'text-xl')
+    .flex.flex-col.sm:flex-row.justify-between.items-center.text-sm.gap-4.text-sm.text-shadowy-200
+      %div
+        %label.whitespace-nowrap
+          Seleccionar formulario
+        = form.select :form_id, options_for_select(@forms.map { |f| [f.name, f.id] }, selected: params[:form_id]), { include_blank: 'All' }, { data: { controller: 'slim', placeholder: 'All', action: 'change->autosave#save' }, class: "block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50" }
 
+      .flex.items-center.gap-2
+        %button.cursor-pointer.inline-flex.items-center.px-4.py-2.border.border-transparent.rounded-md.shadow-sm.text-sm.font-medium.text-white.bg-blue-600.hover:bg-blue-700.focus:outline-none.focus:ring-2.focus:ring-offset-2.focus:ring-blue-500{ data: { action: "click->profiles-form#open" } }
+          = render BootstrapIconWithTextComponent.new(icon: 'funnel', text: 'Filter', extra_classes: 'text-xl')
+        %button.cursor-pointer.inline-flex.items-center.px-4.py-2.border.border-transparent.rounded-md.shadow-sm.text-sm.font-medium.text-white.bg-blue-600.hover:bg-blue-700.focus:outline-none.focus:ring-2.focus:ring-offset-2.focus:ring-blue-500
+          = render BootstrapIconWithTextComponent.new(icon: 'arrow-clockwise', text: 'Reset', extra_classes: 'text-xl')
+    .flex.items-center.justify-center.text-shadowy-200.text-sm.gap-2
+      %label
+        = "Resultados:"
+      %label
+        = @total_count
     = turbo_frame_tag "profiles-#{@pagy.page}", class: 'profiles' do
       %ul.grid.grid-cols-fill.gap-6.mt-10{role: "list"}
         = render partial: 'profile', collection: @profiles
