--- a/app/views/manager/profiles/_profile.html.haml
+++ b/app/views/manager/profiles/_profile.html.haml
@@ -1,3 +1,2 @@
 %li.col-span-1.flex.flex-col.divide-y.divide-shadowy-200.rounded-lg.text-center.shadow.cursor-pointer.max-w-custom
-  = link_to manager_profiles_path(profile), class: 'profile', 'data-turbo-frame': '_top' do
-    = render ProfileCardComponent.new(photo: profile.face_photo.attached? ? url_for(profile.face_photo) : image_url('no_image.png'), name: profile.name, surname: profile.surname, agency: profile.agent_name, email: profile.email, phone: profile.phone)
+  = render ProfileCardComponent.new(photo: profile.face_photo.attached? ? url_for(profile.face_photo) : image_url('no_image.png'), name: profile.name, surname: profile.surname, agency: profile.agent_name, email: profile.email, phone: profile.phone, id: profile.id)
