Added description and description photo on forms and also add avatars on tables and avatar component.

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -5,3 +5,6 @@
 @import 'sweetalert2/dist/sweetalert2.css';
 @import './stimulus-multiselect.css';
 @import './slimselect.css';
+@import 'trix/dist/trix.css';
+@import './trix_customization.css';
+@import 'actiontext.css';
