--- a/app/views/manager/forms/_form.html.haml
+++ b/app/views/manager/forms/_form.html.haml
@@ -1,11 +1,25 @@
 = form_with model: [:manager, @form], local: true, data: { controller: "field-checkbox", turbo: false } do |form|
   = render HeaderComponent.new(title: @title, description: @description, buttons: @header_buttons)
   .mb-4.p-4.mt-10
-    = form.label :name, 'Nombre del formulario', class: 'block text-sm font-medium leading-6 text-sm text-shadowy-200'
-    = form.text_field :name, class: 'mt-1 block rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm', placeholder: 'Introduce el nombre del formulario'
-    - if @form.errors[:name].present?
-      .text-red-500.text-sm
-        = @form.errors[:name].first
+    .flex.items-center.justify-between
+      .name
+        = form.label :name, 'Nombre del formulario', class: 'block text-sm font-medium leading-6 text-sm text-shadowy-200'
+        = form.text_field :name, class: 'mt-1 block rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm', placeholder: 'Introduce el nombre del formulario'
+        - if @form.errors[:name].present?
+          .text-red-500.text-sm
+            = @form.errors[:name].first
+      .description-photo
+        = render UploadFileComponent.new( form: form,
+                                          model: :form,
+                                          attribute: :description_photo,
+                                          multiple: false,
+                                          icon: 'camera',
+                                          accepted_types: %w[png jpg jpeg heic],
+                                          max_size_mb: 5 )
+
+    = form.label :description, 'Descripción', class: 'block text-sm font-medium leading-6 text-sm text-shadowy-200'
+    = form.rich_text_area :description, class: 'message-text-area-html mt-4', data: { scheduled_messages_target: 'textHtmlSelector' }
+
 
   .flex.items-center.mb-4{data: { action: "click->field-checkbox#toggleCheckbox" } }
     = check_box_tag 'select_all', '1', false, class: 'hidden', data: { field_checkbox_target: "checkboxSelectAll" }
