--- a/app/views/manager/settings/index.html.haml
+++ b/app/views/manager/settings/index.html.haml
@@ -8,7 +8,7 @@
     = form_with(model: current_user, url: manager_update_settings_path, method: :patch, local: true, class: 'md:col-span-2' ) do |form|
       .grid.grid-cols-1.gap-x-6.gap-y-8.sm:max-w-xl.sm:grid-cols-6
         .col-span-full.flex.items-center.gap-x-8{ data: { controller: "image-preview" } }
-          %img.h-24.w-24.flex-none.rounded-lg.bg-gray-800.object-cover{ alt: "Profile photo", src: (current_user.profile_photo.attached? ? url_for(current_user.profile_photo) : image_url('no_image.png')), data: { image_preview_target: "preview" }}
+          %img.h-24.w-24.flex-none.rounded-lg.bg-gray-800.object-cover{ alt: "Profile photo", src: (current_user.profile_photo.attached? ? url_for(current_user.profile_photo) : image_url('no_profile_photo.svg')), data: { image_preview_target: "preview" }}
           %div
             = form.file_field :profile_photo, direct_upload: true, class: 'hidden', data: { image_preview_target: "source", action: "change->image-preview#updatePreview" }
             %button.rounded-md.px-3.py-2.text-sm.font-semibold.text-white.shadow-sm{ class: 'bg-white/10 hover:bg-white/20', type: "button", data: { action: "image-preview#triggerUpload" } }
