Estilos menú, formularios y crear formulario

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -7,4 +7,5 @@
 @import './slimselect.css';
 @import 'trix/dist/trix.css';
 @import './trix_customization.css';
+@import './castvault.css';
 @import 'actiontext.css';
