--- a/app/views/manager/forms/show.html.haml
+++ b/app/views/manager/forms/show.html.haml
@@ -62,4 +62,4 @@
                     = t("forms_controller.multiselect_texts.#{key}.#{value}")
 
   .mt-4.text-center
-    = form.submit t('labels.send'), class: "inline-flex items-center rounded-full bg-primary px-4 py-3 text-md font-medium text-white transition duration-200 cursor-pointer hover:bg-dark hover:transition-all focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+    = form.submit t('labels.send'), class: "inline-flex items-center bg-primary rounded-full px-4 py-3 text-md font-semibold text-dark transition duration-200 cursor-pointer hover:bg-dark hover:text-primary hover:ring-1 hover:ring-primary hover:transition-all focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary"
