--- a/app/components/header_component.html.haml
+++ b/app/components/header_component.html.haml
@@ -1,8 +1,8 @@
-.xl:flex.xl:items-center.xl:justify-between
+.lg:flex.lg:items-center.lg:justify-between
   .min-w-0.flex-1
-    %h2.text-2xl.font-bold.text-primary.sm:truncate.sm:text-3xl.sm:tracking-tight
+    %h2.text-2xl.font-bold.text-white.sm:truncate.sm:text-3xl.sm:tracking-tight
       = @title
-    %p.text-md.mt-2.text-shadowy-200.pr-5
+    %p.text-md.mt-2.text-shadowy-100.pr-5
       = @description
   .mt-4.flex.xl:ml-4.xl:mt-0.lg:justify-end.gap-3
     - @buttons&.each_with_index do |button, index|
