--- a/app/components/upload_file_component.html.haml
+++ b/app/components/upload_file_component.html.haml
@@ -1,14 +1,15 @@
 .col-span-full.text-center{data: { controller: 'upload-file-component', image_url: @image_url }}
 
-  .image-upload-area.mt-2.flex.justify-center.rounded-lg.border.border-dashed.px-6.py-10.relative{class: 'border-gray-900/25', data: { action: "dragover->upload-file-component#dragover dragleave->upload-file-component#dragleave drop->upload-file-component#drop drop->#{@extra_actions}", upload_file_component_target: 'imageUploadArea' }}
-    .text-center
-      = render BootstrapIconWithTextComponent.new(icon: @icon, extra_classes: 'text-4xl text-gray-400 mx-auto')
-      .mt-4.flex.text-sm.leading-6.text-gray-600
-        = @form.file_field @attribute, multiple: @multiple, class: 'sr-only', data: { upload_file_component_target: 'input', action: "change->upload-file-component#preview change->#{@extra_actions}", max_size: @max_size_mb }, accept: accepted_types_to_mime
-        %label.relative.cursor-pointer.rounded-md.bg-shadowy-200.px-1.mb-2.font-semibold.text-indigo-600.focus-within:outline-none.focus-within:ring-2.focus-within:ring-indigo-600.focus-within:ring-offset-2.hover:text-indigo-500{ for: "#{@model}_#{@attribute}" }
-          %span Upload a file
-        %p.pl-1 or drag and drop
-      %p.text-xs.leading-5.text-gray-600= accepted_types_message
+  .image-upload-area.bg-shadowy-700.mt-2.flex.justify-center.rounded-lg.border.border-dashed.p-6.relative{class: 'border-gray-900/25', data: { action: "dragover->upload-file-component#dragover dragleave->upload-file-component#dragleave drop->upload-file-component#drop drop->#{@extra_actions}", upload_file_component_target: 'imageUploadArea' }}
+    .text-center.flex
+      = render BootstrapIconWithTextComponent.new(icon: @icon, extra_classes: 'text-5xl text-gray-400 mx-auto')
+      .flex.flex-col.ml-4
+        .flex.text-sm.leading-6.text-shadowy-200
+          = @form.file_field @attribute, multiple: @multiple, class: 'sr-only', data: { upload_file_component_target: 'input', action: "change->upload-file-component#preview change->#{@extra_actions}", max_size: @max_size_mb }, accept: accepted_types_to_mime
+          %label.relative.cursor-pointer.font-semibold.text-primary.focus-within:outline-none.focus-within:ring-2.focus-within:ring-indigo-600.focus-within:ring-offset-2.hover:text-white{ for: "#{@model}_#{@attribute}" }
+            %span Upload a file
+          %p.pl-1 or drag and drop
+        %p.text-xs.leading-5.text-shadowy-200= accepted_types_message
   - if @label
     = @form.label @attribute, @label, class: 'block text-sm font-medium leading-6 text-gray-900'
 
