Fixed load of dashboards.

--- a/app/views/manager/dashboard/index.html.haml
+++ b/app/views/manager/dashboard/index.html.haml
@@ -27,19 +27,19 @@
 
     .bg-dark.px-4.py-6.sm:px-6.lg:px-8.mt-6
       %h3.text-sm.font-medium.leading-6.text-gray-400 Perfiles por Etnia
-      = pie_chart @profiles_by_ethnicity, colors: ["#f8b195", "#f67280", "#c06c84", "#6c5b7b", "#355c7d"], dataset: {borderColor: '#111827', borderWidth: 5}, legend: false
+      = pie_chart @profiles_by_ethnicity, donut: true, colors: ["#f8b195", "#f67280", "#c06c84", "#6c5b7b", "#355c7d"], dataset: {borderColor: '#111827', borderWidth: 5}, legend: false
 
     .bg-dark.px-4.py-6.sm:px-6.lg:px-8.mt-6
       %h3.text-sm.font-medium.leading-6.text-gray-400 Perfiles por Género
-      = pie_chart @profiles_by_gender, colors: ["#f8b195", "#f67280", "#c06c84", "#6c5b7b", "#355c7d"], dataset: {borderColor: '#111827', borderWidth: 5}, legend: false
+      = pie_chart @profiles_by_gender, donut: true, colors: ["#f8b195", "#f67280", "#c06c84", "#6c5b7b", "#355c7d"], dataset: {borderColor: '#111827', borderWidth: 5}, legend: false
 
     .bg-dark.px-4.py-6.sm:px-6.lg:px-8
       %p.text-sm.font-medium.leading-6.text-gray-400 Tipo de Cabello
-      = pie_chart @hair_type_distribution, colors: ["#f8b195", "#f67280", "#c06c84", "#6c5b7b", "#355c7d"], dataset: {borderColor: '#111827', borderWidth: 5}, legend: false
+      = pie_chart @hair_type_distribution, donut: true, colors: ["#f8b195", "#f67280", "#c06c84", "#6c5b7b", "#355c7d"], dataset: {borderColor: '#111827', borderWidth: 5}, legend: false
 
     .bg-dark.px-4.py-6.sm:px-6.lg:px-8
       %p.text-sm.font-medium.leading-6.text-gray-400 Color de Cabello
-      = pie_chart @hair_color_distribution, colors: ["#f8b195", "#f67280", "#c06c84", "#6c5b7b", "#355c7d"], dataset: {borderColor: '#111827', borderWidth: 5}, legend: false
+      = pie_chart @hair_color_distribution, donut: true, colors: ["#f8b195", "#f67280", "#c06c84", "#6c5b7b", "#355c7d"], dataset: {borderColor: '#111827', borderWidth: 5}, legend: false
 
     .bg-dark.px-4.py-6.sm:px-6.lg:px-8
       %p.text-sm.font-medium.leading-6.text-gray-400 Color de Ojos
@@ -47,12 +47,16 @@
 
     .bg-dark.px-4.py-6.sm:px-6.lg:px-8
       %p.text-sm.font-medium.leading-6.text-gray-400 Agencia
-      = pie_chart @agency_distribution, colors: ["#f8b195", "#f67280", "#c06c84", "#6c5b7b", "#355c7d"], dataset: {borderColor: '#111827', borderWidth: 5}, legend: false
+      = pie_chart @agency_distribution, donut: true, colors: ["#f8b195", "#f67280", "#c06c84", "#6c5b7b", "#355c7d"], dataset: {borderColor: '#111827', borderWidth: 5}, legend: false
 
     .bg-dark.px-4.py-6.sm:px-6.lg:px-8
       %p.text-sm.font-medium.leading-6.text-gray-400 Pasaporte
-      = pie_chart @passport_distribution, colors: ["#f8b195", "#f67280", "#c06c84", "#6c5b7b", "#355c7d"], dataset: {borderColor: '#111827', borderWidth: 5}, legend: false
+      = pie_chart @passport_distribution, donut: true, colors: ["#f8b195", "#f67280", "#c06c84", "#6c5b7b", "#355c7d"], dataset: {borderColor: '#111827', borderWidth: 5}, legend: false
 
     .bg-dark.px-4.py-6.sm:px-6.lg:px-8
       %p.text-sm.font-medium.leading-6.text-gray-400 Licencia de Conducir
-      = pie_chart @driving_license_distribution, colors: ["#f8b195", "#f67280", "#c06c84", "#6c5b7b", "#355c7d"], dataset: {borderColor: '#111827', borderWidth: 5}, legend: false
+      = pie_chart @driving_license_distribution, donut: true, colors: ["#f8b195", "#f67280", "#c06c84", "#6c5b7b", "#355c7d"], dataset: {borderColor: '#111827', borderWidth: 5}, legend: false
+
+
+
+
