--- a/app/components/navbar_component.html.haml
+++ b/app/components/navbar_component.html.haml
@@ -8,7 +8,7 @@
       - @links.each do |link|
         %a.text-sm.font-semibold.leading-6.text-white{href: link[:url]}= link[:name]
     .flex.flex-1.items-center.justify-end.gap-x-6
-      %a.hidden.lg:block.lg:text-sm.lg:font-semibold.lg:leading-6.lg:text-white{href: "/users/sign_in"} Log in
+      %a.hidden.lg:block.lg:text-sm.lg:font-semibold.lg:leading-6.lg:text-white{href: "/users/sign_in", "data-turbo" => "false"} Log in
       %a.rounded-md.bg-indigo-600.px-3.py-2.text-sm.font-semibold.text-white.shadow-sm.hover:bg-indigo-500.focus-visible:outline.focus-visible:outline-2.focus-visible:outline-offset-2.focus-visible:outline-indigo-600{href: "/users/sign_up"} Sign up
     .flex.lg:hidden
       %button.inline-flex.items-center.justify-center.rounded-md.text-gray-700{class: "-m-2.5 p-2.5", type: "button", data: {action: 'navbar#toggleMobileMenu'}}
@@ -35,5 +35,5 @@
             - @links.each do |link|
               %a.-mx-3.block.rounded-lg.px-3.py-2.text-base.font-semibold.leading-7.text-white.hover:bg-gray-50{href: link[:url], data: {action: 'navbar#toggleMobileMenu'}}= link[:name]
           .py-6
-            -#%a.-mx-3.block.rounded-lg.px-3.text-base.font-semibold.leading-7.text-white.hover:bg-gray-50{class: "py-2.5", href: "#"} Log in
-            %a.rounded-md.bg-indigo-600.px-3.py-2.text-sm.font-semibold.text-white.shadow-sm.hover:bg-indigo-500.focus-visible:outline.focus-visible:outline-2.focus-visible:outline-offset-2.focus-visible:outline-indigo-600{href: "/users/sign_in"} Log in
+            -#%a.-mx-3.block.rounded-lg.px-3.text-base.font-semibold.leading-7.text-white.hover:bg-gray-50{class: "py-2.5", href: "#", "data-turbo" => "false"} Log in
+            %a.rounded-md.bg-indigo-600.px-3.py-2.text-sm.font-semibold.text-white.shadow-sm.hover:bg-indigo-500.focus-visible:outline.focus-visible:outline-2.focus-visible:outline-offset-2.focus-visible:outline-indigo-600{href: "/users/sign_in", "data-turbo" => "false"} Log in
